# template-python-library

./: .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  Makefile  README.md  mkdocs.yml  pyproject.toml  pytest.ini
assets/: .gitignore  Makefile  openssl.cnf
assets/certificates/: ca.crt.example.pem
scripts/: example-install-artifactory-dependencies.bash  fix-virtual-environment-ca-bundle.bash
src/example/: __init__.py
src/example/api/: aws.py  aws_test.py  conftest.py
src/example/api/types/: __init__.py
src/example/cli/: main.py
